compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_method_instance_call_returned_type.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A {}\n\n        impl A {\n            pub fn bar<T>(self, val: T) -> T {\n                return val;\n            }\n        }\n\n        fn bar() {\n            let a: A = A { };\n\n            let _: Boolean = a.bar<Boolean>(false);\n        }"
---

