compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_method_instance_call_returned_type_incomp.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A {}\n\n        impl A {\n            pub fn bar<T>(self, val: T) -> T {\n                return val;\n            }\n        }\n\n        fn bar() {\n            let a: A = A { };\n\n            let _: Int32 = a.bar<Boolean>(false);\n        }"
---
× error[LM4001]: mismatched types
    ╭───────────
 11 │ 
 12 │             let _: Int32 = a.bar<Boolean>(false);
    │                              ^^^^^^^^^^^^^^^^^^^^ expected type Int32, but found type Boolean...
 13 │         }
    ∶ 
 11 │ 
 12 │             let _: Int32 = a.bar<Boolean>(false);
    │                    ^^^^^ ...because of type defined here
 13 │         }
    ╰──
   help: expected type Int32
            found type Boolean
