compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_method_static_call_param.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A {}\n\n        impl A {\n            pub fn bar<T>(val:  T) { }\n        }\n\n        fn bar() {\n            A::bar<Boolean>(false);\n        }"
---

