compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_method_static_return.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A {}\n\n        impl A {\n            pub fn bar<T>(val:  T) -> T {\n                return val;\n            }\n        }"
---

