compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_type_method_instance_call_incorrect_type.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A<T> {}\n\n        impl<T> A<T> {\n            pub fn bar(self, val:  T) { }\n        }\n\n        fn bar() {\n            let a: A<Boolean> = A<Boolean> { };\n\n            a.bar(0);\n        }"
---
× error[LM4001]: mismatched types
    ╭───────────
 9  │ 
 10 │             a.bar(0);
    │                   ^ expected type Boolean, but found type Int32...
 11 │         }
    ∶ 
 7  │         fn bar() {
 8  │             let a: A<Boolean> = A<Boolean> { };
    │                      ^^^^^^^ ...because of type defined here
    ╰──
   help: expected type Boolean
            found type Int32
